--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,9 +102,9 @@ section {
     sections
 ==================================================*/
 .color-green {
-
-    background-image: url('/assets/img/wheat.jpg')!important;
+   background-image: url('/assets/img/wheat.jpg')!important;
 }
+
 .color-white {
    background-color: #fff !important;
 }
@@ -139,9 +139,11 @@ section {
 }
 .head-sub-main {
     font-size:40px !important;
-    font-weight:600!important;
+    font-weight:600 !important;
     color:white !important;
-    padding:5px 20px 300px 20px;
+    padding:20px 20px 300px 20px;
+    background: rgba(0, 0, 0, 0.4);
+    border-radius: 50px;
 }
 
 
