--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,8 +48,8 @@ h2 {
     line-height:40px;
     font-weight:900;
     font-size:30px;
-     padding:0 20px 10px 0;
-
+    padding:0 20px 10px 0;
+    margin-top: 5px;
 }
 h3 {
     line-height:30px;
@@ -115,7 +115,20 @@ section {
     padding-bottom: 10px;
     background-color: white;
 }
+
 .person img{
+    width: 100%;
+    padding: 3px;
+}
+
+.organisation {
+    margin-top:10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    background-color: white;
+}
+
+.organisation img {
     width: 100%;
     padding: 3px;
 }
