--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,6 @@
 body {
     font-family:'Open Sans', sans-serif;
     font-size:14px;
-    background-image: url('assets/img/cornfield.jpg');
 }
 
 .nav a {
@@ -102,7 +101,7 @@ section {
     sections
 ==================================================*/
 .color-green {
-   background-image: url('/assets/img/wheat.jpg')!important;
+   background-image: url('../img/wheat.jpg')
 }
 
 .color-white {
@@ -158,7 +157,7 @@ section {
 
 .head-sub-main {
     padding:30px 30px 30px 30px;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.3);
     border-radius: 50px;
     margin-bottom: 20px;
 }
@@ -260,4 +259,36 @@ border: 1px solid #e1e1e1;
 .header-img{
     width:800px;
     padding-top:30px;
+}
+
+.carousel { z-index: -99; } /* keeps this behind all content */
+.carousel .item {
+    position: fixed; 
+    width: 100%; height: 100%;
+    -webkit-transition: opacity 1s;
+    -moz-transition: opacity 1s;
+    -ms-transition: opacity 1s;
+    -o-transition: opacity 1s;
+    transition: opacity 1s;
+
+}
+.carousel .one {
+    background: url(../img/wheat.jpg);
+    background-size: cover;
+    -moz-background-size: cover;
+}
+.carousel .two {
+    background: url(../img/cornfield.jpg);
+    background-size: cover;
+    -moz-background-size: cover;
+}
+.carousel .three {
+    background: url(../img/maize.jpg);
+    background-size: cover;
+    -moz-background-size: cover;
+}
+.carousel .active.left {
+    left:0;
+    opacity:0;
+    z-index:2;
 }
