--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,14 +73,26 @@ h4 {
 }
 
 a {
-    color: #000000;
+    color: slategrey;
 }
 
 a:hover {
-    color: white;
+    color: slategrey;
 }
 
 a:visited {
+    color: slategrey;
+}
+
+#footer a {
+    color: white;
+}
+
+#footer a:hover {
+    color: white;
+}
+
+#footer a:visited {
     color: white;
 }
 
