--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -379,7 +379,38 @@ nav li {
     font-size: large;
     padding: 10px 30px 30px 30px;
     margin: 15px;
-    background-color: rgba(0,0,0, 0.02);
-    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.02);
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.75);
+}
 
+#content-section {
+    min-height: 300px;
+}
+
+.news-item {
+    color: black;
+    min-height: 200px;
+    background-color: white;
+    margin-bottom: 20px;
+    padding: 10px;
+    background-color: rgba(250, 250, 250, 1);
+    border-radius: 10px;
+
+    -webkit-box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 5px -1px rgba(0, 0, 0, 0.75);
+
+}
+
+.news-item-text {
+    padding-left: 30px
+}
+
+.news-item-text a {
+    color: indianred;
+    font-weight: bold;
+    font-size: larger;
 }
