Add York and GPC bios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -437,9 +437,9 @@ nav li {
 }
 
 .news-item-text a {
-    color: indianred;
+/*    color: indianred;
     font-weight: bold;
-    font-size: larger;
+    font-size: larger; */
 }
 
 /* stupid tiny window */
