--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,8 +384,10 @@ nav li {
 }
 
 .info-panel {
+    position: relative;
+    z-index: 2;
+    overflow: hidden;
     min-height: 260px;
-    //max-width: 400px;
     font-size: large;
     background-color: rgba(0, 0, 0, 0.02);
     border-radius: 10px;
@@ -412,6 +414,56 @@ nav li {
     font-size: 30px;
     margin-top: 5px;    
 }
+
+#info-wrap {
+  position: relative;
+}
+
+#pub-panel-inner:after {
+  content: "\f02d";
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: inherit;
+  position: absolute;
+  font-size: 200px;
+  color: #DDD;
+  top: 50%;
+  left: 50%;
+  margin: -115px 0 0 -100px;
+  z-index: -1;
+}
+
+#cit-panel-inner:after {
+  content: "\f079";
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: inherit;
+  position: absolute;
+  font-size: 200px;
+  color: #DDD;
+  top: 50%;
+  left: 50%;
+  margin: -115px 0 0 -100px;
+  z-index: -1;
+}
+
+#auto-panel-inner:after {
+  content: "\f0d0";
+  font-family: FontAwesome;
+  font-style: normal;
+  font-weight: normal;
+  text-decoration: inherit;
+  position: absolute;
+  font-size: 200px;
+  color: #DDD;
+  top: 50%;
+  left: 50%;
+  margin: -115px 0 0 -100px;
+  z-index: -1;
+}
+
 
 #content-section {
     min-height: 300px;
@@ -511,6 +563,51 @@ nav li {
     width: 60%;
   }
 
+  #auto-panel-inner:after {
+    content: "\f0d0";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    position: absolute;
+    font-size: 140px;
+    color: #DDD;
+    top: 50%;
+    left: 50%;
+    margin: -75px 0 0 -70px;
+    z-index: -1;
+  }
+
+  #pub-panel-inner:after {
+    content: "\f02d";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    position: absolute;
+    font-size: 140px;
+    color: #DDD;
+    top: 50%;
+    left: 50%;
+    margin: -75px 0 0 -70px;
+    z-index: -1;
+  }
+
+  #cit-panel-inner:after {
+    content: "\f079";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    position: absolute;
+    font-size: 140px;
+    color: #DDD;
+    top: 50%;
+    left: 50%;
+    margin: -75px 0 0 -70px;
+    z-index: -1;
+  }
+
 }
 
 /* Small Devices, Tablets */
@@ -546,6 +643,50 @@ nav li {
     width: 100%;
   }
 
+  #auto-panel-inner:after {
+    content: "\f0d0";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    position: absolute;
+    font-size: 140px;
+    color: #DDD;
+    top: 50%;
+    left: 50%;
+    margin: -65px 0 0 -70px;
+    z-index: -1;
+  }
+
+  #pub-panel-inner:after {
+    content: "\f02d";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    position: absolute;
+    font-size: 140px;
+    color: #DDD;
+    top: 50%;
+    left: 50%;
+    margin: -65px 0 0 -70px;
+    z-index: -1;
+  }
+
+  #cit-panel-inner:after {
+    content: "\f079";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    position: absolute;
+    font-size: 140px;
+    color: #DDD;
+    top: 50%;
+    left: 50%;
+    margin: -75px 0 0 -70px;
+    z-index: -1;
+  }
 }
 
 /* Medium Devices, Desktops */
@@ -573,6 +714,50 @@ nav li {
     width: 100%;
   }
 
+  #auto-panel-inner:after {
+    content: "\f0d0";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    position: absolute;
+    font-size: 140px;
+    color: #DDD;
+    top: 50%;
+    left: 50%;
+    margin: -190px 0 0 -70px;
+    z-index: -1;
+  }
+
+  #pub-panel-inner:after {
+    content: "\f02d";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    position: absolute;
+    font-size: 140px;
+    color: #DDD;
+    top: 50%;
+    left: 50%;
+    margin: -190px 0 0 -70px;
+    z-index: -1;
+  }
+
+  #cit-panel-inner:after {
+    content: "\f079";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    position: absolute;
+    font-size: 140px;
+    color: #DDD;
+    top: 50%;
+    left: 50%;
+    margin: -190px 0 0 -70px;
+    z-index: -1;
+  }
 }
 
 /* Large Devices, Wide Screens */
@@ -600,6 +785,50 @@ nav li {
     width: 100%;
   }
 
+  #auto-panel-inner:after {
+    content: "\f0d0";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    position: absolute;
+    font-size: 200px;
+    color: #DDD;
+    top: 50%;
+    left: 50%; 
+    margin: -115px 0 0 -100px;
+    z-index: -1;
+  }
+
+  #pub-panel-inner:after {
+    content: "\f02d";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    position: absolute;
+    font-size: 200px;
+    color: #DDD;
+    top: 50%;
+    left: 50%;
+    margin: -115px 0 0 -100px;
+    z-index: -1;
+  }
+
+  #cit-panel-inner:after {
+    content: "\f079";
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    text-decoration: inherit;
+    position: absolute;
+    font-size: 220px;
+    color: #DDD;
+    top: 50%;
+    left: 50%;
+    margin: -138px 0 0 -120px;
+    z-index: -1;
+  }
 }
 
 
